<resources>
    <string name="app_name">LoginAppDemo</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_wait">Please wait...</string>

    <string name="fullname">Full Name</string>

    <string name="signupinstead">Sign Up Instead</string>
    <string name="signup">Sign Up</string>

    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>